# systemtap

./: .gitignore  .mailmap  AUTHORS  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  bpf-base.cxx  bpf-internal.h  bpf-opt.cxx  bpf-translate.cxx  buildrun.cxx  client-http.cxx  client-http.h  client-nss.cxx  client-nss.h  cmdline.cxx  cmdline.h  config.in  configure  configure.ac  csclient.cxx  csclient.h  dtrace.in  dwflpp.cxx  dwflpp.h  elaborate.cxx  elaborate.h  loc2stap.cxx  loc2stap.h  macros.systemtap.in  main.cxx  nss-server-info.cxx  nss-server-info.h  nsscommon.cxx  nsscommon.h  parse.cxx  parse.h  remote.cxx  (+25 more)
doc/: Makefile.in
doc/SystemTap_Tapset_Reference/: Makefile.am  Makefile.in  docproc.c  syscalls.3stap  syscalls.xmlpart  tapsets.tmpl
doc/Tapset_Reference_Guide/: manpager.sh
doc/beginners/: Makefile.am  Makefile.in
httpd/: Makefile.am  Makefile.in  api.cxx  api.h  backends.cxx  backends.h  main.cxx  nss_funcs.cxx  nss_funcs.h  server.cxx  server.h  stap-server.sudoers  utils.cxx  utils.h
httpd/docker/: Makefile.am  Makefile.in  centos.json  fedora.json  fedora_install_package.py  fedora_install_packages.py  stap_build_docker_container.py  stap_build_docker_file.py  stap_build_docker_image.py  stap_image_cleanup.py
initscript/: systemtap.in  systemtap.service
java/: Makefile.in  stapbm.in
man/: Makefile.am  Makefile.in  error::pass5.7stap  stap.1.in  stappaths.7.in  stapprobes.3stap  stapref.1  systemtap-service.8.in  systemtap.8.in
man/cs/: Makefile.in  error::pass2.7stap  stap.1.in  stappaths.7.in  stapprobes.3stap  stapref.1  warning::debuginfo.7stap
po/: POTFILES.in  cs.gmo  cs.po  en.gmo  en.po  fr.gmo  fr.po  pl.gmo  pl.po  systemtap.pot
python/: Makefile.am  Makefile.in
runtime/: addr-map.h  common_probe_context.h  compatdefs.h  map.c  regs.c  runtime.h  stack.c  stp_string.c  stp_utrace.c  sym.c  task_finder_vma.c  time.c  unwind.c
runtime/dyninst/: print.c
runtime/linux/: access_process_vm.h  addr-map.c  alloc.c  autoconf-access_ok_2args.c  autoconf-compat-utimbuf.c  autoconf-get_user_pages-flags.c  autoconf-linux-sched_headers.c  autoconf-time32.c  autoconf-uapi-mount.c  autoconf-unwind-stack-trace.c  compat_unistd.h  loc2c-runtime.h  print.c  probe_lock.h  runtime.h  stp_tracepoint.c  task_finder.c  timer_compatibility.h  uprobes-inode.c
runtime/transport/: control.c  control.h  procfs.c  relay_v2.c  symbols.c  transport.c
runtime/unwind/: unwind.h
scripts/: dump-syscalls.sh  spin-rawhide  update-copyrights
stap-exporter/: Install  Makefile.am  Makefile.in  USAGE  example1.stp  exporter.conf  exporter.py  stap-exporter  stap-exporter.8  stap-exporter.in  stap-exporter.options  stap-exporter.service
stap-exporter/default/: EXAMPLE_NOERROR  errno.stp  syscallsbypid.stp
stap-exporter/scripts/: also_ran.stp  cpu_throttle.stp  example1.stp  example2.stp
stapbpf/: Makefile.am  Makefile.in  bpfinterp.cxx  bpfinterp.h  libbpf.c  libbpf.h  stapbpf.8  stapbpf.cxx
stapdyn/: Makefile.am  Makefile.in  mutator.cxx  stapdyn.cxx
staprun/: Makefile.am  Makefile.in  common.c  ctl.c  mainloop.c  modverify.c  monitor.c  relay.c  staprun.8  staprun.c  staprun.h  staprun_funcs.c
tapset/: errno.stp  logging.stp  macros.stpm  prometheus.stp  prometheus.stpm  this.stp  tokenize.stp  uconversions.stp
tapset/bpf/: context.stp  conversions.stp  exit.stp
tapset/linux/: aux2_syscalls.stp  aux_syscalls.stp  ip.stp  ipmib.stp  memory.stp  netfilter.stp  networking.stp  nfsd.stp  signal.stp  sysc_accept.stp  sysc_accept4.stp  sysc_access.stp  sysc_acct.stp  sysc_add_key.stp  sysc_adjtimex.stp  sysc_alarm.stp  sysc_bdflush.stp  sysc_bind.stp  sysc_bpf.stp  sysc_brk.stp  sysc_capget.stp  sysc_capset.stp  sysc_chdir.stp  sysc_chmod.stp  sysc_chown.stp  sysc_chown16.stp  sysc_chroot.stp  sysc_clock_adjtime.stp  sysc_clock_getres.stp  sysc_clock_gettime.stp  sysc_clock_nanosleep.stp  sysc_clock_settime.stp  sysc_clone.stp  sysc_close.stp  sysc_connect.stp  sysc_copy_file_range.stp  sysc_creat.stp  sysc_delete_module.stp  sysc_dup.stp  sysc_dup2.stp  (+306 more)
tapset/mips/: registers.stp
tapset/x86_64/: registers.stp
testsuite/: Makefile.am  Makefile.in  configure  configure.ac
testsuite/buildko/: example.stp
testsuite/buildok/: cmdline01.stp  defined-entry.stp  example.stp  loadavg-embedded.stp  syscall_any.stp  syscalls-detailed.stp  thirtytwo.stp  two.stp
testsuite/config/: unix.exp
testsuite/lib/: compile_flags.exp  http_server.exp  server_ns.exp  stap_run.exp  systemtap.exp  test_simple.exp
testsuite/parseko/: at_kderef.stp  at_kregister.stp  cmdline25.stp  cmdline26.stp  fnorder.stp
testsuite/parseok/: at_kderef.stp  at_kregister.stp  big_array.stp
testsuite/runok/: regex.stp  regex_grouping.stp  regex_noelide.stp
testsuite/semko/: thirtynine.stp
testsuite/semok/: badvar_undefined.stp  thirtyeight.stp  thirtyfour.stp  thirtysix.stp  twenty.stp  vfs_add_to_page_cache.stp  xfslines.stp
testsuite/systemtap.apps/: mysql.exp  postgres.exp  xulrunner.exp
testsuite/systemtap.base/: abort.exp  abort_1.stp  abort_2.stp  abort_3.stp  abort_6.stp  abort_7.stp  abort_8.stp  addr_op.exp  addr_op_1.c  addr_op_1.stp  addr_op_2.stp  addr_op_3.stp  addr_op_4.c  addr_op_4.stp  addr_op_5.stp  alias_tapset.exp  at_deref.c  at_deref.exp  (+107 more)
(+931 files in other folders)
